--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             .header {
                 width:100%;
                 height:100vh;
-                background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/f.png.png);
+                background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(f.png.png);
                 background-size:cover;
                 background-position: center;
                 padding:10px 8%;
@@ -251,9 +251,9 @@
     <body >
         <div class="header">
             <nav>
-                <img src="./images/l.png.png" class="logo">
+                <img src="l.png.png" class="logo">
                 <div>
-                    <button class="language-btn">English <img src="./images/l.png.png" ></button>
+                    <button class="language-btn">English <img src="l.png.png" ></button>
                     <button>Sign In</button>
                 </div>
             </nav>
@@ -275,13 +275,13 @@
                 <p> Watch on smart TV , playstation , Xbox, chromecast , Apple tv, bluray players and more </p>
             </div>
             <div class="img-col">
-                <img src="./images/a.png.png">
+                <img src="a.png.png">
             </div>
         </div>
        </div>
        <div class="row">
         <div class="img-col">
-            <img src="./images/b.png.png">
+            <img src="b.png.png">
             </div>
             <div class="text-col">
                 <h2> Download your shows to watch offline .</h2>
